# ammio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  main.yml  release.yml
config/: config.example.json  interface.example.json  interface.modbus.example.json  interface.opcua.example.json  interface.trdp.example.json
scripts/: build.bat  build_and_run.bat  build_windows-x64.bat  run.bat
src/: config.c  config.h  log.c  log.h  main.c  var_server.c  var_server.h  var_table.c  var_table.h
src/compat/: net.h
src/interfaces/: interface.c  interface.h  modbus_iface.c  modbus_iface.h  opcua_iface.c  opcua_iface.h  trdp.c  trdp.h  trdp_iface.c  trdp_iface.h
src/protocols/: protocol.c  protocol.h  trdp.c  trdp.h
