cmake_minimum_required(VERSION 3.13)
project(ammio C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

if(MSVC)
    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
    add_compile_options(/std:c11 /experimental:c11atomics)
endif()

find_package(Threads REQUIRED)

# ==============================================================================
# External dependencies
# ==============================================================================

# cJSON: single-file JSON parser
add_library(cjson STATIC external/cJSON/cJSON.c)
target_include_directories(cjson PUBLIC ${CMAKE_SOURCE_DIR}/external/cJSON)

# uthash: header-only hash table
add_library(uthash INTERFACE)
target_include_directories(uthash INTERFACE ${CMAKE_SOURCE_DIR}/external/uthash/src)

# nng: messaging library
set(NNG_TESTS OFF CACHE BOOL "" FORCE)
set(NNG_TOOLS OFF CACHE BOOL "" FORCE)
add_subdirectory(external/nng)

# TRDP: Train Real-time Data Protocol
set(TRDP_DIR ${CMAKE_SOURCE_DIR}/external/TCNopen/trdp)
add_library(trdp STATIC
    ${TRDP_DIR}/src/common/trdp_pdcom.c
    ${TRDP_DIR}/src/common/trdp_mdcom.c
    ${TRDP_DIR}/src/common/trdp_utils.c
    ${TRDP_DIR}/src/common/trdp_stats.c
    ${TRDP_DIR}/src/common/tlp_if.c
    ${TRDP_DIR}/src/common/tlc_if.c
    ${TRDP_DIR}/src/common/tlm_if.c
    ${TRDP_DIR}/src/vos/common/vos_utils.c
    ${TRDP_DIR}/src/vos/common/vos_mem.c
)
target_include_directories(trdp PUBLIC
    ${TRDP_DIR}/src/api
    ${TRDP_DIR}/src/vos/api
    ${TRDP_DIR}/src/common
)
if(WIN32)
    target_sources(trdp PRIVATE
        ${TRDP_DIR}/src/vos/windows/vos_sock.c
        ${TRDP_DIR}/src/vos/windows/vos_thread.c
        ${TRDP_DIR}/src/vos/windows/vos_shared_mem.c
    )
    target_include_directories(trdp PRIVATE ${TRDP_DIR}/src/vos/windows)
    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
        target_compile_definitions(trdp PUBLIC WIN64 L_ENDIAN MD_SUPPORT=1)
    else()
        target_compile_definitions(trdp PUBLIC WIN32 L_ENDIAN MD_SUPPORT=1)
    endif()
    target_compile_definitions(trdp PRIVATE _CRT_SECURE_NO_WARNINGS _WINSOCK_DEPRECATED_NO_WARNINGS)
    target_link_libraries(trdp PUBLIC ws2_32 iphlpapi)
else()
    target_sources(trdp PRIVATE
        ${TRDP_DIR}/src/vos/posix/vos_sock.c
        ${TRDP_DIR}/src/vos/posix/vos_thread.c
        ${TRDP_DIR}/src/vos/posix/vos_shared_mem.c
    )
    target_include_directories(trdp PRIVATE ${TRDP_DIR}/src/vos/posix)
    target_compile_definitions(trdp PUBLIC POSIX LINUX _GNU_SOURCE L_ENDIAN)
    target_link_libraries(trdp PUBLIC Threads::Threads rt)
endif()

# libmodbus: Modbus TCP/RTU protocol
set(LIBMODBUS_VERSION_MAJOR 3)
set(LIBMODBUS_VERSION_MINOR 1)
set(LIBMODBUS_VERSION_MICRO 12)
set(LIBMODBUS_VERSION "3.1.12")
configure_file(
    ${CMAKE_SOURCE_DIR}/external/libmodbus/src/modbus-version.h.in
    ${CMAKE_SOURCE_DIR}/external/libmodbus/src/modbus-version.h
    @ONLY
)
if(WIN32)
    configure_file(
        ${CMAKE_SOURCE_DIR}/external/libmodbus/src/win32/config.h.win32
        ${CMAKE_BINARY_DIR}/libmodbus_config/config.h
        @ONLY
    )
else()
    file(WRITE ${CMAKE_BINARY_DIR}/libmodbus_config/config.h
"/* config.h for libmodbus - generated by CMake */\n"
"#pragma once\n"
"#define HAVE_NETINET_IN_H 1\n"
"#define HAVE_GAI_STRERROR 1\n"
    )
endif()
set(LIBMODBUS_DIR ${CMAKE_SOURCE_DIR}/external/libmodbus/src)
add_library(modbus_lib STATIC
    ${LIBMODBUS_DIR}/modbus.c
    ${LIBMODBUS_DIR}/modbus-data.c
    ${LIBMODBUS_DIR}/modbus-tcp.c
    ${LIBMODBUS_DIR}/modbus-rtu.c
)
target_include_directories(modbus_lib
    PUBLIC  ${LIBMODBUS_DIR}
    PRIVATE ${CMAKE_BINARY_DIR}/libmodbus_config
)
target_compile_definitions(modbus_lib PUBLIC DLLBUILD)
if(WIN32)
    target_compile_definitions(modbus_lib PRIVATE FD_SETSIZE=1024)
    target_link_libraries(modbus_lib PUBLIC ws2_32)
else()
    target_compile_definitions(modbus_lib PRIVATE _GNU_SOURCE)
endif()

# open62541: OPC UA protocol
set(UA_BUILD_EXAMPLES   OFF CACHE BOOL "" FORCE)
set(UA_BUILD_UNIT_TESTS OFF CACHE BOOL "" FORCE)
set(UA_LOGLEVEL         600 CACHE STRING "" FORCE)
add_subdirectory(${CMAKE_SOURCE_DIR}/external/open62541)

# link libraries
set(EXTERNAL_LINK_LIBRARIES
    cjson
    uthash
    nng
    trdp
    modbus_lib
    open62541
    Threads::Threads
)

# ==============================================================================
# ammio
# ==============================================================================

add_executable(ammio
    src/main.c
    src/config.c
    src/log.c
    src/var_table.c
    src/var_server.c
    src/interfaces/interface.c
    src/interfaces/trdp_iface.c
    src/interfaces/modbus_iface.c
    src/interfaces/opcua_iface.c
)

target_link_libraries(ammio
    ${EXTERNAL_LINK_LIBRARIES}
)
